03/02-hello-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - backend:
              serviceName: hello-v1-svc
              servicePort: 80
