03/04-hello-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
  labels:
    type: endpoints-app
spec:
  tls:
    - hosts:
        - taxisbahia.cl
      secretName: hello-tls
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: hello-v1-svc
              servicePort: 80
